# ChangeLog for sys-apps/calculate-client
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  11 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-client-9999.ebuild:
  Add IUSE="kde xfce gnome" to calculate-client-9999.

*calculate-client-2.1.11 (03 Mar 2010)
  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.11.ebuild:
  Bump version.

*calculate-client-2.1.9 (02 Dec 2009)

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.9.ebuild:
  Bump version.

*calculate-client-2.1.8 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-client-2.1.8.ebuild:
  Ebuild for new version of calculate-client.

  05 Aug 2009; Aleksandr Yakimov (yaleks) <yaleks@gentoo.ru>
  calculate-client-2.1.3.ebuild, +metadata.xml:
  Ebuild fix
