@@ -14,6 +14,6 @@ EBUILD calculate-client-2.1.7-r1.ebuild 1772 RMD160 a3e9c9e7dffa4bf2d166f52f21b8
 EBUILD calculate-client-2.1.7.ebuild 1609 RMD160 f5ce7dce6b2e7e1a8bf00ef1a3f99005a5fad653 SHA1 dcbd6bf33f8597162f10042209369a7579242279 SHA256 af44e5162071e59babc99f6ab1bc5b0bb285c95b208eca96b4a6422478112d04
 EBUILD calculate-client-2.1.8.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
 EBUILD calculate-client-2.1.9.ebuild 1606 RMD160 29e6db9602853fd07410bb438c36383fc8530e5b SHA1 6a080a7b0c224c8a2c73749b38cfd81733a324da SHA256 445343909ef13079b04b6923b451f20643bd00f65be722a52fde91ccedb687d9
-EBUILD calculate-client-9999.ebuild 1578 RMD160 1a8bc60f132cf7a86a03a7a5d84285460fa246ee SHA1 e5489600fe8e5e88f70598c6b0d475c0788023e9 SHA256 31d9e9f8d253dc0c823a8f2e914333e67756ce3398300edc3c15a8d43e11f24d
-MISC ChangeLog 875 RMD160 e72351f86c101c6ad8569615f9b45bb68a09f337 SHA1 76dd9bb30afd0be8a9c33b837fe3c349fe3fb137 SHA256 9a91ace003debcd8fbcd022d7f4741b976bdfee37097010cd8f89a39d66acd17
+EBUILD calculate-client-9999.ebuild 1644 RMD160 60e44af47cf785ac2990e61533c38cf0e859428a SHA1 58cd13f684b0f98b26538e27fbf467539663436d SHA256 01308bba3a9534a28d73bedd161d54ed4ec25977f4aa559387e9a6dd39e3dcbb
+MISC ChangeLog 1012 RMD160 9ce7e93570b5e8b228d1e2f1f6e1953519bb2b59 SHA1 673cd1a1ab5940121446faad051cd43fb05525e8 SHA256 fa429955c1f797b8bf0a478e86cdd36a5debbb75523f31591c2b09cd125a3bc0
 MISC metadata.xml 310 RMD160 ed986dbc43c958bd57e0fb73749ee09167ee0221 SHA1 4007f716df1aa85ec65d926f246663effc382384 SHA256 5023605d36dcbb5d5fe1b1ac54f7125a4087479b5168601075a8050ed51c38c2
